# preen

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
docs/: developer.md
preen/: block.py  fake_blocks.py  page.py
tests/: test_preen.py
