[tool.poetry]
name = "preen"
version = "0.1.5"
description = "Preen is a library to help with the testing of wagtail pages and blocks."
authors = ["Jeremy Gibson <jgibson@caktusgroup.com>", "Lorien Olive <lolive@caktusgroup.com>"]

[tool.poetry.dependencies]
python = ">=3.6.*, < 4.*"

[tool.poetry.dev-dependencies]
pytest = "7.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
