[tool.poetry]
name = "preen"
version = "0.1.6"
description = "Preen is a library to help with the testing of wagtail pages and blocks."
authors = ["Jeremy Gibson <jgibson@caktusgroup.com>", "Lorien Olive <lolive@caktusgroup.com>", "Ronard Luna <rluna@caktusgroup.com>", "Jason Judkins <jjudkins@caktusgroup.com>"]
keywords = ["wagtail", "wagtail_test", "wagtail_pages", "wagtail_blocks"]
readme = "README.md"
license = "MIT"
homepage = "https://www.caktusgroup.com/"
repository = "https://github.com/caktus/preen"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.7.*, < 4.*"
wagtail = "^2.15"

[tool.poetry.dev-dependencies]
pytest = "7.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
